Fixes name layout on small screen

--- a/public/stylesheets/user_submit.css
+++ b/public/stylesheets/user_submit.css
@@ -116,3 +116,11 @@
 	background-color: #fff;
 	cursor: default;
 }
+
+@media (max-width: 767px) {
+	.first,
+	.last {
+		padding-right: 0;
+		padding-left: 0;
+	}
+}
